--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.2.0'
     compile 'com.android.support:recyclerview-v7:+'
+    compile 'com.android.support:design:24.2.0'
 
     // retrofit, gson
     compile 'com.google.code.gson:gson:2.6.2'
